tdf#122408 make StatementComposer apply HAVING clause

Change-Id: I381c918e8cac2800367bc586f8c230d46bcd71e5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/93378
Tested-by: Lionel Elie Mamane <lionel@mamane.lu>
Reviewed-by: Michael Stahl <michael.stahl@cib.de>